--- a/home.html
+++ b/home.html
@@ -88,6 +88,7 @@
 
     <!-- Footer -->
     <footer>
+      <section>
       <h5>Pagá con tarjeta o en efectivo</h5>
       <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o
         efectivo en puntos de pago. ¡Y siempre es seguro!</p>
@@ -97,6 +98,7 @@
       <h5>Seguridad, de principio a fin</h5>
       <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no
         puedas hacer, porque estás siempre protegid@.</p>
+      </section>
       <h6>Copyright © 1999-2020 MercadoLiebre S.R.L.</h6>
     </footer>
 
