Formularios agregados. Etiquetas de style agregadas para una mejor diferenciación de secciones

--- a/home.html
+++ b/home.html
@@ -1,12 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
   </head>
-  <body>
 
-    <!-- Header -->
-    <header>
-      <img src="./images/logo-mercado-liebre.svg" alt="Digital House" width="350px">
+  <body>
+                  <!-- Header -->
+    <header style="background-color: yellow;"> <!-- Etiqueta style agregada simplemente para diferenciar el header del main. -->
+      <img src="./images/logo-mercado-liebre.svg" alt="Digital House" width="300px">
       <h1>Mercado Liebre</h1>
         <form>
           <label for="search">Búsqueda</label>
@@ -20,14 +23,14 @@
             <li><a href="#">Tiendas oficiales</a></li>
             <li><a href="#">Vender</a></li>
             <li><a href="#">Ayuda</a></li>
-            <li><a href="#">Creá tu cuenta</a></li>
-            <li><a href="#">Ingresá</a></li>
+            <li><a href="./register.html">Creá tu cuenta</a></li>
+            <li><a href="./login.html">Ingresá</a></li>
             <li><a href="#">Mis compras</a></li>
           </ul>
         </nav>
     </header>
 
-    <!-- Main -->
+                  <!-- Main -->
     <main>
       <section id="lastSeen">
         <h2>Basado en tu última visita</h2>
@@ -86,20 +89,20 @@
       </section>
     </main>
 
-    <!-- Footer -->
-    <footer>
-      <section>
+                  <!-- Footer -->
+    <footer style="background-color: antiquewhite;"> <!-- Etiqueta style agregada simplemente para diferenciar el footer del main. -->
+      <section id="footer">
       <h5>Pagá con tarjeta o en efectivo</h5>
-      <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o
-        efectivo en puntos de pago. ¡Y siempre es seguro!</p>
+          <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o
+          efectivo en puntos de pago. ¡Y siempre es seguro!</p>
       <h5>Envío gratis desde $ 2.500</h5>
-      <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en
-        miles de productos. Es un beneficio de Mercado Puntos.</p>
+          <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en
+          miles de productos. Es un beneficio de Mercado Puntos.</p>
       <h5>Seguridad, de principio a fin</h5>
-      <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no
-        puedas hacer, porque estás siempre protegid@.</p>
+          <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no
+          puedas hacer, porque estás siempre protegid@.</p>
       </section>
-      <h6>Copyright © 1999-2020 MercadoLiebre S.R.L.</h6>
+          <h6>Copyright © 1999-2020 MercadoLiebre S.R.L.</h6>
     </footer>
 
   </body>
