Correcciones al home realizadas. Hoja de estilo agregada.

--- a/html/register.html
+++ b/html/register.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro</title>
+    <title>Registro | ML</title>
 </head>
 <body>
         <!-- Header -->
-    <header style="background-color: yellow;"> <!-- Etiqueta style agregada simplemente para diferenciar el header del main. -->
-        <img src="./images/logo-mercado-liebre.svg" alt="Digital House" width="300px">
+    <header> <!-- Etiqueta style agregada simplemente para diferenciar el header del main. -->
+        <img src="../images/logo-mercado-liebre.svg" alt="Digital House" width="300px">
         <h1>Mercado Liebre</h1>
         <a href="./home.html">Volver a la página principal</a>
     </header>
