--- a/html/login.html
+++ b/html/login.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ingreso</title>
+    <title>Ingreso | ML</title>
 </head>
 <body>
         <!-- Header -->
     <header style="background-color: yellow;"> <!-- Etiqueta style agregada simplemente para diferenciar el header del main. -->
-        <img src="./images/logo-mercado-liebre.svg" alt="Digital House" width="300px">
+        <img src="../images/logo-mercado-liebre.svg" alt="Digital House" width="300px">
         <h1>Mercado Liebre</h1>
         <a href="./home.html">Volver a la página principal</a>
     </header>
@@ -19,11 +19,11 @@
             <ul>
                     <!-- Nombre de usuario -->
                 <li><label for="username">Nombre de usuario</label>
-                <input type="text" name="username" id="username"></li>
+                <input type="text" name="username" id="username" required></li>
             
                     <!-- Contraseña -->
                 <li><label for="password">Contraseña</label>
-                <input type="password" name="password" id="password"></li>
+                <input type="password" name="password" id="password" required></li>
 
                     <!-- Boton -->
                 <input type="submit" value="Iniciar sesión">
