Detalles del header agregados.

--- a/home.html
+++ b/home.html
@@ -1,9 +1,11 @@
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
   </head>
 
-  
+
   <body>
     <!-- Header -->
     <header style="background-color: yellow;"> <!-- Etiqueta style agregada simplemente para diferenciar el header del main. -->
