Hojas de estilos agregadas. Clases definidas para las hojas de estilos. Algunos iconos agregados.

--- a/html/login.html
+++ b/html/login.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ingreso | ML</title>
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="https://kit.fontawesome.com/9ef932abc9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
         <!-- Header -->
-        <header class="header">
-            <img src="../images/logo-mercado-liebre.svg" alt="Digital House">
+        <header class="main-header">
+            <a href="home.html">
+            <img src="../images/logo-mercado-liebre.svg" alt="Digital House" class="logo">
+            </a>
             <h1>Mercado Liebre</h1>
                 <form>
                     <label for="search">Búsqueda</label>
                     <input type="text" name="search" id="search">
                     <input type="submit" value="Buscar">
                 </form>
-                    <p>Comprá en cuotas y sin tarjeta de crédito</p>
+                    <p class="header_line_frase">Comprá en cuotas y sin tarjeta de crédito</p>
             <nav>
                 <ul>
                     <li><a href="#">Ofertas</a></li>
