Secciones de corte agregadas. Ajuste en el posicionamiento de los divs. Responsive funcionando en sus distintas medidas.

--- a/html/home.html
+++ b/html/home.html
@@ -72,8 +72,11 @@
                   <!-- Main -->
 
   <main>
+    <div class="banner">
+      <img src="../images/img-home-banner.jpg" alt="banner">
+    </div>
     <div class="main-container">
-        <!-- Primer Section  -->
+    <!-- Primer Section  -->
       
       <section class="seccion-lastSeen">
 
